crates/jni/tests/ui/bind_java_type/fail/constructor_raw_fn.stderr
error: Only native methods can have 'fn'
  --> tests/ui/bind_java_type/fail/constructor_raw_fn.rs:15:12
   |
15 |         fn new {
   |            ^^^
